--- a/mts/src/app/components/history/history.html
+++ b/mts/src/app/components/history/history.html
@@ -1,22 +1,31 @@
 <div class="page">
   <h1 class="page-title">Transaction History</h1>
- 
+
   <div class="history-card" *ngFor="let tx of transactions">
-    <div>
-      <div class="name">
-        {{ tx.type === 'sent' ? 'Transfer to' : 'Received from' }}
-        {{ tx.name }}
+    <!-- show only SUCCESS -->
+    <ng-container *ngIf="tx.status === 'SUCCESS'">
+      <div>
+        <div class="name">
+          {{
+            tx.fromAccountId === userName
+              ? 'Transfer to ' + tx.toAccountId
+              : 'Received from ' + tx.fromAccountId
+          }}
+        </div>
+        <div class="meta">Today</div>
       </div>
-      <div class="meta">Today</div>
-    </div>
- 
-    <div
-      class="amount"
-      [class.sent]="tx.type === 'sent'"
-      [class.received]="tx.type === 'received'">
-      {{ tx.type === 'sent' ? '-' : '+' }}₹{{ tx.amount }}
-    </div>
+
+      <div
+        class="amount"
+        [class.sent]="tx.fromAccountId === userName"
+        [class.received]="tx.toAccountId === userName"
+      >
+        {{
+          tx.fromAccountId === userName
+            ? '-' + '₹' + tx.amount
+            : '+' + '₹' + tx.amount
+        }}
+      </div>
+    </ng-container>
   </div>
 </div>
-``
- 
