--- a/mts/src/app/components/transfer/transfer.css
+++ b/mts/src/app/components/transfer/transfer.css
@@ -64,4 +64,76 @@ input {
   font-weight: 600;
   cursor: pointer;
 }
+
+.cancel {
+  margin-top: 24px;
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Modal content box */
+.modal-content {
+  background-color: beige;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  animation: slideIn 0.3s ease-out;
+}
+
+/* Modal animations */
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Details styling */
+.modal-details-success {
+  margin-top: 20px;
+  text-align: left;
+  font-size: 14px;
+  background-color: lightgreen;
+  border-radius: 5px;
+  border: 2px solid black;
+  padding:15px;
+}
+
+.modal-details-fail {
+  margin-top: 20px;
+  text-align: left;
+  font-size: 14px;
+  background-color: rgb(253, 59, 59);
+  border-radius: 5px;
+  border: 2px solid black;
+  padding:15px;
+}
+
+
  
