--- a/mts/src/app/components/login/login.html
+++ b/mts/src/app/components/login/login.html
@@ -18,7 +18,7 @@
           <input type="password" placeholder="Enter your password" formControlName="password">
         </div>
   
-        <button type="submit" class="login-btn">
+        <button (click) = "onLogin()" type="submit" class="login-btn">
           Login
         </button>
       </form>
